--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,7 @@
 }
 
 .services {
-  background-image: url('../../bitfolio/public/images/img-2.jpg');
+  background-image: url('../public/images/img-2.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -37,7 +37,7 @@
 }
 
 .products {
-  background-image: url('../../bitfolio/public/images/img-1.jpg');
+  background-image: url('../public/images/img-1.jpg');
   background-position: center;
   background-size: fill;
   background-repeat: no-repeat;
@@ -46,7 +46,7 @@
 }
 
 .sign-up {
-  background-image: url('../../bitfolio/public/images/img-8.jpg');
+  background-image: url('../public/images/img-8.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -55,7 +55,7 @@
 }
 
 .marketnews {
-  background-image: url('../../bitfolio/public/images/img-6.jpg');
+  background-image: url('../public/images/img-6.jpg');
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
