--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
   height: 25vh;
   align-items: center;
   justify-content: center;
-  font-size: 6rem;
+  font-size: 8.2vh;
 }
 
 .services {
@@ -32,7 +32,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   color: #fff;
-  font-size: 100px;
+  font-size: 12vh;
   height: 40vh;
 }
 
@@ -65,7 +65,15 @@
 }
 
 .graph-container{
-  height: 20vh;
-  position: fixed;
-  margin-top: 10vw;
+  /* height: 20vh; */
+  width: 80vw;
+  padding: 2% 0%;
+  margin: 0px 10%;
+  /* margin: 0px 30%; */
+  /* justify-content: center;
+  align-self: center; */
+  /* position: fixed; */
+  /* margin-top: 10vw; */
+
 }
+
