--- a/src/components/Stocklist.css
+++ b/src/components/Stocklist.css
@@ -4,7 +4,7 @@
     /* height: 20vh; */
     text-align: center;
     margin: 60px 2%;
-    font-size: 1.4rem;
+    font-size: 6vh;
 }
 
 .container_heading {
