--- a/src/components/Stockitem.css
+++ b/src/components/Stockitem.css
@@ -75,3 +75,9 @@
     font-size: 2.2vh;
     color: green;
 }
+
+@media screen and (max-width: 820px) {
+    .mb-2{
+        font-size: 3vh;
+    }
+}
