--- a/src/components/pages/Pages.css
+++ b/src/components/pages/Pages.css
@@ -32,14 +32,34 @@
 
 .profile-card{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center; 
     align-items: center;
     padding: 3% 0;
+    
 }
 
+.aaa{
+    margin: 2% 0px;
+    border-width: 3px;
+    border-color: rgb(48, 188, 188);
+    border-radius: 10px;
+}
 
+.stockstable{
+    width: 80%;
+    height: auto;
+    border-width: 3px;
+    border-color: black;
+    border-radius: 10px;
+}
 
+.Signupform{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 8% 4%;
+}
 
 @media screen and (max-width: 820px) {
     .demo-head{
@@ -61,5 +81,7 @@
         padding: 5% 0;
         /* margin: 0 4%; */
     }
-    
+    .Signupform{
+        margin: 22% 14%;
+    }
 }
