--- a/src/App.css
+++ b/src/App.css
@@ -66,9 +66,9 @@
 
 .graph-container{
   /* height: 20vh; */
-  width: 80vw;
+  width: 70vw;
   padding: 2% 0%;
-  margin: 0px 10%;
+  margin: 0px 15%;
   /* margin: 0px 30%; */
   /* justify-content: center;
   align-self: center; */
@@ -77,3 +77,9 @@
 
 }
 
+@media screen and (max-width: 820px) {
+  .graph-container{
+    width: 81%;
+    margin: 0px 10%;
+  }
+}
