--- a/src/components/Stockitem.css
+++ b/src/components/Stockitem.css
@@ -63,7 +63,7 @@
     color: black;
     font-weight: 900;
     font-size: 4.8vh;
-    font-family: cursive;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
 }
 
