--- a/src/components/pages/Pages.css
+++ b/src/components/pages/Pages.css
@@ -1,6 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,200&display=swap');
 
-
+#search-graph{
+    font-size: 8vh;
+    text-align: left;
+    margin: 2% 3%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 .demo-head{
     text-align: center;
     margin:  10px 0;
@@ -61,6 +66,8 @@
     margin: 8% 4%;
 }
 
+
+
 @media screen and (max-width: 820px) {
     .demo-head{
         padding: 14% 0;
@@ -83,5 +90,9 @@
     }
     .Signupform{
         margin: 22% 14%;
+    }
+    #search-graph{
+        font-size: 5vh;
+        margin: 8% 4%;
     }
 }
