--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -137,6 +137,11 @@
   margin-bottom: 16px;
 }
 
+#map-id{
+  width: 18vw;
+  height: 32vh;
+}
+
 @media screen and (max-width: 820px) {
   .footer-links {
     padding-top: 2rem;
@@ -156,6 +161,10 @@
 
   .social-media-wrap {
     flex-direction: column;
+  }
+  #map-id{
+    width: 40vw;
+    height: 30vh;
   }
 }
 
